--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     <span class="text-gray-400 text-sm">LOAD (RPS)</span>
                     <span id="rps-display" class="text-blue-300 font-mono text-sm">0.0 req/s</span>
                 </div>
+                <div class="flex justify-between items-center pt-1">
+                    <span class="text-gray-400 text-sm">TRAFFIC MIX</span>
+                    <div class="flex gap-1 text-xs font-mono">
+                        <span class="text-green-400" id="mix-web">45%</span>
+                        <span class="text-orange-400" id="mix-api">40%</span>
+                        <span class="text-purple-400" id="mix-fraud">15%</span>
+                    </div>
+                </div>
                 <div class="flex justify-between items-center pt-3 border-t border-gray-700 mt-2">
                     <span class="text-gray-300 font-bold text-lg">TOTAL SCORE</span>
                     <span id="total-score-display" class="text-white font-mono text-2xl font-bold">0</span>
@@ -271,10 +279,20 @@
                     onclick="setTool('waf')">
                     <div
                         class="absolute top-0 right-0 bg-green-900/80 text-green-400 text-[9px] px-1 rounded-bl font-mono">
-                        $50</div>
+                        $40</div>
                     <div class="w-4 h-4 bg-purple-500 rounded-sm mb-1 shadow-[0_0_10px_rgba(168,85,247,0.6)]"></div>
                     <span class="text-[10px] font-bold mt-1">WAF</span>
                     <span class="text-[8px] text-gray-400">Sec</span>
+                </button>
+
+                <!-- SQS -->
+                <button id="tool-sqs"
+                    class="service-btn bg-gray-800 text-gray-200 p-2 rounded-lg w-16 h-16 flex flex-col items-center justify-center border border-transparent group relative overflow-hidden"
+                    onclick="setTool('sqs')">
+                    <div class="absolute top-0 right-0 bg-green-900/80 text-green-400 text-[9px] px-1 rounded-bl font-mono">$40</div>
+                    <div class="w-5 h-3 bg-orange-500 rounded-sm mb-1 shadow-[0_0_10px_rgba(255,153,0,0.6)]"></div>
+                    <span class="text-[10px] font-bold mt-1">SQS</span>
+                    <span class="text-[8px] text-gray-400">Queue</span>
                 </button>
 
                 <button id="tool-alb"
@@ -293,7 +311,7 @@
                     onclick="setTool('lambda')">
                     <div
                         class="absolute top-0 right-0 bg-green-900/80 text-green-400 text-[9px] px-1 rounded-bl font-mono">
-                        $100</div>
+                        $80</div>
                     <div class="w-4 h-4 bg-orange-500 rounded-full mb-1 shadow-[0_0_10px_rgba(249,115,22,0.6)]"></div>
                     <span class="text-[10px] font-bold mt-1">EC2</span>
                     <span class="text-[8px] text-gray-400">Comp</span>
@@ -304,12 +322,22 @@
                     onclick="setTool('db')">
                     <div
                         class="absolute top-0 right-0 bg-green-900/80 text-green-400 text-[9px] px-1 rounded-bl font-mono">
-                        $200</div>
+                        $180</div>
                     <div
                         class="w-4 h-4 bg-red-600 rounded-sm mb-1 shadow-[0_0_10px_rgba(220,38,38,0.6)] border-b-2 border-red-800">
                     </div>
                     <span class="text-[10px] font-bold mt-1">RDS</span>
                     <span class="text-[8px] text-gray-400">Data</span>
+                </button>
+
+                <!-- Cache -->
+                <button id="tool-cache"
+                    class="service-btn bg-gray-800 text-gray-200 p-2 rounded-lg w-16 h-16 flex flex-col items-center justify-center border border-transparent group relative overflow-hidden"
+                    onclick="setTool('cache')">
+                    <div class="absolute top-0 right-0 bg-green-900/80 text-green-400 text-[9px] px-1 rounded-bl font-mono">$75</div>
+                    <div class="w-4 h-4 bg-red-600 rounded mb-1 shadow-[0_0_10px_rgba(220,56,45,0.6)]"></div>
+                    <span class="text-[10px] font-bold mt-1">Cache</span>
+                    <span class="text-[8px] text-gray-400">Redis</span>
                 </button>
 
                 <!-- S3 -->
@@ -318,7 +346,7 @@
                     onclick="setTool('s3')">
                     <div
                         class="absolute top-0 right-0 bg-green-900/80 text-green-400 text-[9px] px-1 rounded-bl font-mono">
-                        $25</div>
+                        $30</div>
                     <div class="w-4 h-4 bg-emerald-500 rounded-full mb-1 shadow-[0_0_10px_rgba(16,185,129,0.6)]"></div>
                     <span class="text-[10px] font-bold mt-1">S3</span>
                     <span class="text-[8px] text-gray-400">Store</span>
@@ -443,18 +471,24 @@
                     <h3 class="text-lg font-bold text-blue-400 mb-4">SERVICES</h3>
                     <ul class="space-y-2 text-sm text-gray-300">
                         <li class="flex justify-between"><span class="text-purple-400 font-bold">WAF</span> <span>Blocks
-                                Fraud ($50)</span></li>
+                                Fraud ($40)</span></li>
+                        <li class="flex justify-between"><span class="text-orange-500 font-bold">SQS</span>
+                            <span>Buffers 200 requests ($40)</span>
+                        </li>
                         <li class="flex justify-between"><span class="text-blue-400 font-bold">Load Balancer</span>
                             <span>Distributes Traffic ($50)</span>
                         </li>
                         <li class="flex justify-between"><span class="text-orange-400 font-bold">Compute</span>
-                            <span>Processes API ($100)</span>
+                            <span>Processes Requests ($80)</span>
                         </li>
                         <li class="flex justify-between"><span class="text-red-400 font-bold">Database</span>
-                            <span>Stores API Data ($200)</span>
+                            <span>Stores API Data ($180)</span>
+                        </li>
+                        <li class="flex justify-between"><span class="text-red-500 font-bold">ElastiCache</span>
+                            <span>Cache layer ($75)</span>
                         </li>
                         <li class="flex justify-between"><span class="text-emerald-400 font-bold">S3</span> <span>Stores
-                                Web Data ($25)</span></li>
+                                Web Data ($30)</span></li>
                     </ul>
                 </div>
             </div>
@@ -530,7 +564,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-sm">
                     <div class="bg-gray-800/30 p-3 rounded">
                         <strong class="text-white block mb-1">Upgrades</strong>
-                        <p class="text-gray-400">Click existing Compute/DB instances to upgrade capacity (Tier 1-3).</p>
+                        <p class="text-gray-400">Click existing Compute/DB/Cache instances to upgrade capacity (Tier 1-3).</p>
                     </div>
                     <div class="bg-gray-800/30 p-3 rounded">
                         <strong class="text-white block mb-1">Load Balancing</strong>
@@ -539,6 +573,29 @@
                     <div class="bg-gray-800/30 p-3 rounded">
                         <strong class="text-white block mb-1">Failure Conditions</strong>
                         <p class="text-gray-400">Reputation reaches 0% or Money reaches -$1000.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Advanced Services -->
+            <div class="mt-8">
+                <h3 class="text-lg font-bold text-blue-400 mb-4">ADVANCED SERVICES</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+                    <div class="bg-gray-800/30 p-3 rounded border border-orange-900/50">
+                        <strong class="text-orange-400 block mb-1">SQS Queue</strong>
+                        <p class="text-gray-400 text-xs">
+                            Massive buffer holding 200 requests. Place after WAF to smooth DDoS spikes,
+                            or before Compute to prevent overload. Cheap insurance against traffic bursts.
+                        </p>
+                        <p class="text-gray-500 text-xs mt-1">Flow: WAF → SQS → ALB or ALB → SQS → Compute</p>
+                    </div>
+                    <div class="bg-gray-800/30 p-3 rounded border border-red-900/50">
+                        <strong class="text-red-400 block mb-1">ElastiCache (Redis)</strong>
+                        <p class="text-gray-400 text-xs">
+                            Caching layer with 35-65% hit rate. Cache hits complete instantly without
+                            hitting DB/S3. Upgrade tiers for higher hit rates. Great for reducing DB costs.
+                        </p>
+                        <p class="text-gray-500 text-xs mt-1">Flow: Compute → Cache → DB/S3</p>
                     </div>
                 </div>
             </div>
